--- a/Longevida/src/app/home/home.component.html
+++ b/Longevida/src/app/home/home.component.html
@@ -29,12 +29,12 @@
       <div class="row mb-1">
         <img src="../../assets/img/seloshome.jpg" class="d-block w-100" alt="...">
       </div>
-        <h1 class="display-4 font-weight-bold mt-5">NOVIDADES</h1>
+        <h1 class="display-4 font-weight-bold mt-5 time">NOVIDADES</h1>
         <div class="row row-cols-1 row-cols-sm- row-cols-md-4">
             <div class="col m-5"><div class="card" style="width: 18rem;">
                 <img src="../../assets/img/cabides.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Cabides de bambu</h5>
+                  <h5 class="card-title nome">CABIDES DE BAMBU</h5>
                   <p class="card-text text-left font-weight-bold">R$ 12.99</p>
                   <div class="d-flex justify-content-center align-items-center">
                     <a (click)='venda()' class="btn btn-outline  "> <img width="40px" height="25px" src="../../assets/img/carrinho-de-compras.svg" alt="...">Comprar</a>
@@ -45,7 +45,7 @@
             <div class="col m-5"><div class="card" style="width: 18rem;">
                 <img src="../../assets/img/Escova_de_dente.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Kit escova dente de bambu</h5>
+                  <h5 class="card-title nome">KIT ESCOVA DE DENTE DE BAMBU</h5>
                   <p class="card-text text-left font-weight-bold">R$ 35.90</p>
                   <div class="d-flex justify-content-center align-items-center">
                     <a (click)='venda()' class="btn btn-outline  "> <img width="40px" height="25px" src="../../assets/img/carrinho-de-compras.svg" alt="...">Comprar</a>
@@ -56,7 +56,7 @@
             <div class="col m-5"><div class="card" style="width: 18rem;">
                 <img src="../../assets/img/escorredor.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Escorredor de bambu</h5>
+                  <h5 class="card-title nome">ESCORREDOR DE BAMBU</h5>
                   <p class="card-text text-left font-weight-bold">R$ 19.99</p>
                   <div class="d-flex justify-content-center align-items-center">
                     <a (click)='venda()' class="btn btn-outline  "> <img width="40px" height="25px" src="../../assets/img/carrinho-de-compras.svg" alt="...">Comprar</a>
@@ -70,12 +70,12 @@
   </div>
   <div class="container-fluid d-flex justify-content-center align-items-center flex-column mb-5" style="background-color: white;">
       
-    <h1 class="display-4 font-weight-bold">PROMOÇÕES</h1>
+    <h1 class="display-4 font-weight-bold time">PROMOÇÕES</h1>
     <div class="row row-cols-1 row-cols-sm- row-cols-md-4">
         <div class="col m-5"><div class="card" style="width: 18rem;">
             <img src="../../assets/img/kit-talheres.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Kit talheres de bambu</h5>
+              <h5 class="card-title nome">KIT TALHERES DE BAMBU</h5>
               <p class="card-text text-left font-weight-bold">  <s>R$ 47.99</s> - R$ 45.99   </p> 
               <div class="d-flex justify-content-center align-items-center">
                 <a (click)='venda()' class="btn btn-outline  "> <img width="40px" height="25px" src="../../assets/img/carrinho-de-compras.svg" alt="...">Comprar</a>
@@ -87,7 +87,7 @@
         <div class="col m-5"><div class="card" style="width: 18rem;">
             <img src="../../assets/img/Porta_Talher.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Porta talheres de bambu</h5>
+              <h5 class="card-title nome">PORTA TALHERES DE BAMBU</h5>
               <p class="card-text text-left font-weight-bold"> <s>R$28.99</s> - R$ 25.99 </p>
               <div class="d-flex justify-content-center align-items-center">
                 <a (click)='venda()' class="btn btn-outline  "> <img width="40px" height="25px" src="../../assets/img/carrinho-de-compras.svg" alt="...">Comprar</a>
@@ -98,7 +98,7 @@
         <div class="col m-5"><div class="card" style="width: 18rem;">
             <img src="../../assets/img/embalagem_sustentavel.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Embalagem Sustentável</h5>
+              <h5 class="card-title nome">EMBALAGEM SUSTENTAVEL</h5>
               <p class="card-text text-left font-weight-bold"> <s>R$69.99</s> - R$ 65.00</p>
               <div class="d-flex justify-content-center align-items-center">
                 <a (click)='venda()' class="btn btn-outline  "> <img width="40px" height="25px" src="../../assets/img/carrinho-de-compras.svg" alt="...">Comprar</a>
