--- a/Longevida/src/app/cadastro/cadastro.component.html
+++ b/Longevida/src/app/cadastro/cadastro.component.html
@@ -1,10 +1,10 @@
 <div class="container">
     <div class="row mt-5 mb-5">
         <div class="col-md-12">
-            <h1 class="text-center text-secondary text-monospace">Cadastrar</h1>
+            <h1 class="text-center nome">CADASTRAR</h1>
         </div>
     </div>
-    <div class="row mb-5 d-flex justify-content-center">
+    <div class="row d-flex justify-content-center" style="margin-bottom: 10%;">
         <div class="col-md-8">
             <div>
                 <div class="form-group">
