--- a/Longevida/src/app/crud-produto/crud-produto.component.html
+++ b/Longevida/src/app/crud-produto/crud-produto.component.html
@@ -1,11 +1,11 @@
 <div class="container d-flex justify-content-center">
 
-    <div class="row mt-2 mb-2">
+    <div class="row mb-2" style="margin-top: 6%;" >
         <div class="col-md-12">
-          <h3 class="text-center mb-4 text-monospace">Cadastro de uma nova categoria:</h3>
+          <h3 class="text-center mb-4 nome">CADASTRE UMA NOVA CATEGORIA:</h3>
   
           <div class="form-group">
-            <label class="text-monospace" for="categoria">Nome da categoria: </label>
+            <label class="text-monospace font-weight-bold" for="categoria">NOME DA CATEGORIA: </label>
             <input type="text" class="form-control shadow" id="categoria" placeholder="Digite o nome da categoria" [(ngModel)]='categoria.categoria'>
         </div>
         <div class="row mb-5">
@@ -17,8 +17,10 @@
         <hr>
   
         <div class="row mt-5">
-          <div class="col-md-12">
-            <h4 class="text-center text-monospace">Lista de categorias</h4>
+          <div class="col-md-12 ">
+            
+            <h4 class="text-center secundario">LISTA DE CATEGORIAS:</h4>
+            <br>
           </div>
         </div>
   
@@ -54,29 +56,29 @@
 
       
         <div class="col-md-12">
-          <h3 class="text-center mb-4 text-monospace">Cadastro de um novo produto:</h3>
+          <h3 class="text-center mb-4 nome">CADASTRO DE UM NOVO PRODUTO:</h3>
             
           <div class="form-group">
-            <label class="text-monospace" for="nome">Nome da categoria: </label>
+            <label class="text-monospace font-weight-bold" for="nome">Nome da categoria: </label>
             <input type="text" class="form-control shadow" id="nome" placeholder="Digite o nome do produto" [(ngModel)]='produtos.nameProduto'>
           </div>
           <div class="form-group">
-            <label class="text-monospace" for="quantidade">Quantidade: </label>
+            <label class="text-monospace font-weight-bold" for="quantidade">Quantidade: </label>
             <input type="text" class="form-control shadow" id="quantidade" placeholder="A quantidade" [(ngModel)]='produtos.quantidadeProduto'>
           </div>
           <div class="form-group">
-            <label class="text-monospace" for="preco">Preço: </label>
+            <label class="text-monospace font-weight-bold" for="preco">Preço: </label>
             <input type="text" class="form-control shadow" id="preco" placeholder="Digite o preço do produto" [(ngModel)]='produtos.precoProduto'>
           </div>
           <div class="form-group">
-            <label for="descricao" class="text-monospace fs-18">Descrição</label>
+            <label for="descricao" class="text-monospace fs-18 font-weight-bold">Descrição</label>
             <textarea  id="descricao"  rows="3" class="form-control shadow" placeholder="Digite aqui a descrição" [(ngModel)]='produtos.descricaoProduto'></textarea>
         </div>
             
         <div class="row d-flex align-items-end mb-5">
           <div class="col-md-6">
               <div class="form-group m-0">
-               <label for="categoria" class="text-monospace">Escolha um categoria</label>
+               <label for="categoria" class="text-monospace font-weight-bold">Escolha um categoria</label>
                 <select name="tema" id="tema" class="form-control shadow" [(ngModel)]='idCategoria'  (change)='findByIdCategoria()' >
                   <option *ngFor='let item of listaCategoria' value={{item.id}}>
                       {{item.categoria}}
@@ -94,7 +96,8 @@
   
         <div class="row mt-5">
           <div class="col-md-12">
-            <h4 class="text-center text-monospace">Lista de produtos</h4>
+            <h4 class="text-center secundario">LISTA DE PRODUTO:</h4>
+            <br>
           </div>
         </div>
   
