--- a/Longevida/src/app/empresa/empresa.component.html
+++ b/Longevida/src/app/empresa/empresa.component.html
@@ -1,6 +1,6 @@
 <div class="jumbotron d-flex justify-content-center align-items-center flex-column mt-5 " style="background-color: white;">
     <div class="w-100 rounded d-flex justify-content-center mb-5" >
-        <h1 class="display-4 font-weight-bold text-dark">QUEM SOMOS?</h1>   
+        <h1 class="display-4 font-weight-bold text-dark time">QUEM SOMOS?</h1>   
     </div> 
   <img src="../../assets/img/quemsomos.jpg" width="1500" height="400" class="img-fluid" alt="Responsive image">     
  </div> 
@@ -11,9 +11,9 @@
  background: radial-gradient(circle, rgba(24,58,85,0.07886904761904767) 38%, rgba(37,102,112,0.5354516806722689) 100%);">
  <div class="row w-100 p-5">
    <div class="col-md-2 d-flex flex-column align-items-center text-center">
-    <img src="../../assets/img/foto.jpg" alt="Godoy" width="150px" class="sombra" height="150px" style="border-radius: 50%; -webkit-box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);
+    <a href="https://linkedin.com/in/gustavo-godoy-"><img src="../../assets/img/foto.jpg" alt="Godoy" width="150px" class="sombra" height="150px" style="border-radius: 50%; -webkit-box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);
     -moz-box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);
-    box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);">
+    box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);"></a>
     <p class="nome">Gustavo Godoy</p>
     <p class="tech">TECH LEAD</p>
     <p class="developer">Developer</p>
