--- a/Longevida/src/app/login/login.component.css
+++ b/Longevida/src/app/login/login.component.css
@@ -24,3 +24,9 @@
   .show > .btn-outline.dropdown-toggle:focus {
     box-shadow: 0 0 0 0.2rem  rgba(142, 174, 179, 0.877);
   }
+
+  .nome{
+    font-family: 'Oswald', sans-serif;
+    color: #256670;
+    font-size: 9vh;
+}
