--- a/Longevida/src/app/login/login.component.html
+++ b/Longevida/src/app/login/login.component.html
@@ -1,12 +1,12 @@
-<div class="container">
-    <div class="row mt-5 mb-5">
+<div class="container" style="margin-top: 10%;">
+    <div class="row mb-5" style="margin-top: 10%;">
         <div class="col-md-12">
-            <h1 class="text-center text-secondary text-monospace">
-                Login
+            <h1 class="text-center nome">
+                LOGIN
             </h1>
         </div>
     </div>
-    <div class="row mb-5 d-flex justify-content-center">
+    <div class="row d-flex justify-content-center" style="margin-bottom: 20%;">
         <div class="col-md-6">
             <div>
                 <div class="form-group">
