--- a/Longevida/src/app/produtos/produtos.component.css
+++ b/Longevida/src/app/produtos/produtos.component.css
@@ -4,3 +4,20 @@ h2{
     font-family: 'Oswald', sans-serif;
     color: #256670;
 }
+
+.nome{
+    font-family: 'Oswald', sans-serif;
+    color: #256670;
+    font-size: 2.82vh;
+}
+
+.text{
+    font-family: 'Oswald', sans-serif;
+    font-size: 1.70vh;
+}
+
+.preco{
+    font-family: 'Oswald', sans-serif;
+    font-size: 2.50vh;
+    color: #256670;
+}
