--- a/Longevida/src/app/produtos/produtos.component.html
+++ b/Longevida/src/app/produtos/produtos.component.html
@@ -60,16 +60,16 @@
                         <img class="card-img-top" src="../../assets/img/card1.jpg" alt="Imagem de capa do card">
                         <div class="card-body">
                             <div >
-                                <p class="card-text font-weight-bold mb-1">{{item.nameProduto}}</p>     
+                                <p class="card-text font-weight mb-1 nome">{{item.nameProduto}}</p>     
                             </div>
                             <div class="mb-3">
-                                <p class="card-text " style="font-size: 12px;">{{item.descricaoProduto}}</p>
+                                <p class="card-text text">{{item.descricaoProduto}}</p>
                             </div>
-                            <div class="mb-2">
-                                <p class="card-text font-weight-bold">R$ {{item.precoProduto}}</p>        
+                            <div class="mt-4 d-flex justify-content-center align-items-end">
+                                <p class="card-text font-weight-bold preco">R$ {{item.precoProduto}}</p>        
                             </div>
                             <div class="d-flex justify-content-center align-items-end">
-                            <a  class="btn btn-outline mt-2 " (click)='venda()'> <img width="40px" height="25px" src="../../assets/img/carrinho-de-compras.svg" alt="...">Comprar</a> 
+                            <a  class="btn btn-outline mt-1 " (click)='venda()'> <img width="40px" height="25px" src="../../assets/img/carrinho-de-compras.svg" alt="...">Comprar</a> 
                           </div>
                         </div>
                     </div>
@@ -124,16 +124,16 @@
                       <img class="card-img-top" src="../../assets/img/card1.jpg" alt="Imagem de capa do card">
                       <div class="card-body">
                           <div >
-                              <p class="card-text font-weight-bold mb-1">{{prod.nameProduto}}</p>     
+                              <p class="card-text mb-1 nome">{{prod.nameProduto}}</p>     
                           </div>
                           <div class="mb-3">
-                              <p class="card-text " style="font-size: 12px;">{{prod.descricaoProduto}}</p>
+                              <p class="card-text text">{{prod.descricaoProduto}}</p>
                           </div>
-                          <div class="mb-2">
-                              <p class="card-text font-weight-bold">R$ {{prod.precoProduto}}</p>        
+                          <div class="mt-4 d-flex justify-content-center align-items-end">
+                              <p class="card-text font-weight-bold preco">R$ {{prod.precoProduto}}</p>        
                           </div>
                           <div class="d-flex justify-content-center align-items-end">
-                          <a  class="btn btn-outline mt-2 " (click)='venda()'> <img width="40px" height="25px" src="../../assets/img/carrinho-de-compras.svg" alt="...">Comprar</a> 
+                          <a  class="btn btn-outline mt-1 " (click)='venda()'> <img width="40px" height="25px" src="../../assets/img/carrinho-de-compras.svg" alt="...">Comprar</a> 
                         </div>
                       </div>
                   </div>
