--- a/Longevida/src/app/empresa/empresa.component.html
+++ b/Longevida/src/app/empresa/empresa.component.html
@@ -19,7 +19,7 @@
     <p class="developer">Developer</p>
   </div>
    <div class="col-md-2 d-flex flex-column align-items-center text-center">
-    <img src="../../assets/img/ph.jpg" alt="Godoy" width="150px" height="150px" style="border-radius: 50%; -webkit-box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);
+    <img src="linkedin.com/in/paulo-morais-2aab41a1/" alt="Godoy" width="150px" height="150px" style="border-radius: 50%; -webkit-box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);
     -moz-box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);
     box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);">
     <p class="nome">Paulo Morais</p>
@@ -27,28 +27,28 @@
     <p class="developer">Developer</p>
   </div>
    <div class="col-md-2 d-flex flex-column align-items-center text-center">
-    <img src="../../assets/img/gui.jpg" alt="Godoy" width="150px" height="150px" style="border-radius: 50%; -webkit-box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);
+    <img src="https://www.linkedin.com/in/guilherme-cano-21187b12b/" alt="Godoy" width="150px" height="150px" style="border-radius: 50%; -webkit-box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);
     -moz-box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);
     box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);">
     <p class="nome">Guilherme Cano</p>
     <p class="developer">Developer</p>
    </div>
    <div class="col-md-2 d-flex flex-column align-items-center text-center">
-    <img src="../../assets/img/bia.jpg" alt="Godoy" width="150px" height="150px" style="border-radius: 50%; -webkit-box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);
+    <img src="https://www.linkedin.com/in/beatriz-rodrigues-6b1665160/" alt="Godoy" width="150px" height="150px" style="border-radius: 50%; -webkit-box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);
     -moz-box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);
     box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);">
     <p class="nome">Beatriz Rodrigues</p>
     <p class="developer">Developer</p>
    </div>
    <div class="col-md-2 d-flex flex-column align-items-center text-center">
-    <img src="../../assets/img/aninha.jpg" alt="Godoy" width="150px" height="150px" style="border-radius: 50%; -webkit-box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);
+    <img src="https://www.linkedin.com/in/anaeusebiodasilva/" alt="Godoy" width="150px" height="150px" style="border-radius: 50%; -webkit-box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);
     -moz-box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);
     box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);">
     <p class="nome">Ana Eusébio</p>
     <p class="developer">Developer</p>
    </div>
    <div class="col-md-2 d-flex flex-column align-items-center text-center">
-    <img src="../../assets/img/henrique.jpg" alt="Godoy" width="150px" height="150px" style="border-radius: 50%; -webkit-box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);
+    <img src="https://www.linkedin.com/in/henrique-marcelino-b00954191/" alt="Godoy" width="150px" height="150px" style="border-radius: 50%; -webkit-box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);
     -moz-box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);
     box-shadow: 9px 9px 25px -21px rgba(0,0,0,0.86);">
     <p class="nome">Henrique Marcelino</p>
