--- a/Longevida/src/app/contato/contato.component.html
+++ b/Longevida/src/app/contato/contato.component.html
@@ -56,7 +56,7 @@ background: linear-gradient(86deg, rgba(24,58,85,1) 0%, rgba(37,102,112,1) 100%)
           </div>
 
           <div class="form-group d-flex justify-content-center">
-            <button type="submit" class="btn btn-outline w-25">Enviar</button>
+            <button type="submit" class="btn btn-outline w-25" (click)='enviar()'>Enviar</button>
               </div>
           </form>
       </div>
