Pojeto Longevida | Front-End | Angular

--- a/Longevida/src/app/cadastro/cadastro.component.html
+++ b/Longevida/src/app/cadastro/cadastro.component.html
@@ -35,6 +35,7 @@
                 <div class="form-group">
                     <label for="usuario">Usuario</label>
                     <input type="text" class="form-control shadow" id="usuario" placeholder="usuario" [(ngModel)]='user.usuario'>
+                    <small id="emailHelp" class="form=text text-muted" >Minimo de 5 caracteres.</small>
                 </div>
 
 
